--- a/src/stylesheets/css/main.css
+++ b/src/stylesheets/css/main.css
@@ -1,17 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
-
 html {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
   -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 h1,
@@ -49,11 +48,11 @@ textarea {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   min-height: 100vh;
 }
 
@@ -67,8 +66,8 @@ textarea {
 
 .main {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 body {
@@ -113,8 +112,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 55px;
 }
 
@@ -124,8 +123,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 50px;
 }
 
@@ -135,10 +134,9 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
-
 .login__input__block label {
   color: rgb(51, 51, 51);
   font-family: "Poppins", sans-serif;
@@ -148,7 +146,6 @@ body {
   letter-spacing: 0%;
   text-align: left;
 }
-
 .login__input__block input {
   font-size: inherit;
   font-family: inherit;
@@ -156,10 +153,9 @@ body {
   border-bottom: 1px solid;
   padding: 10px 8px 2px 8px;
   -webkit-box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
-  box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
+          box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
   padding: 16px 24px 6px 24px;
 }
-
 .login__input__block input:focus {
   outline: none;
   border-bottom: 2px solid rgb(0, 119, 255);
@@ -179,7 +175,6 @@ body {
   line-height: 29px;
   margin-top: 40px;
 }
-
 .login__btn:hover {
   opacity: 0.8;
 }
@@ -193,7 +188,7 @@ body {
   top: 50%;
   right: 10px;
   -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+          transform: translateY(-50%);
   background: transparent;
   border: none;
   cursor: pointer;
@@ -214,33 +209,27 @@ body {
     line-height: 52px;
   }
 }
-
 @media screen and (max-width: 550px) {
   .login {
     width: 375px;
   }
-
   .login__block {
     gap: 30px;
   }
-
   .login__form {
     gap: 16px;
   }
 }
-
 @media screen and (max-width: 450px) {
   .login__logo {
     font-size: 32px;
     line-height: 36px;
     margin-bottom: 16px;
   }
-
   .login__input__block input {
     padding: 8px 12px 2px 12px;
   }
 }
-
 .header {
   border-bottom: 1px solid #e4e1e1;
   padding: 8px 0;
@@ -253,7 +242,6 @@ body {
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
-
 .header__title:hover {
   text-decoration: underline;
 }
@@ -263,11 +251,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 4px 0;
 }
 
@@ -282,7 +270,6 @@ body {
   transition: all 0.2s ease;
   cursor: pointer;
 }
-
 .header__btn:hover {
   opacity: 0.8;
 }
@@ -336,16 +323,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 15px;
   position: relative;
 }
-
 .main__card span {
   display: block;
 }
-
 .main__card button {
   display: inline-block;
   border-radius: 30px;
@@ -358,11 +343,9 @@ body {
   transition: all 0.2s ease;
   cursor: pointer;
 }
-
 .main__card button:hover {
   opacity: 0.8;
 }
-
 .main__card::after {
   content: "#";
   position: absolute;
@@ -389,11 +372,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   gap: 10px;
 }
 
@@ -428,13 +411,11 @@ body {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
 @media screen and (max-width: 730px) {
   .main__list {
     grid-template-columns: repeat(1, 1fr);
   }
 }
-
 @media screen and (max-width: 535px) {
   .main__block {
     display: -webkit-box;
@@ -442,34 +423,25 @@ body {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 20px;
   }
-
   .main__list {
     grid-template-columns: repeat(2, 1fr);
     height: calc(100vh - 405px);
   }
 }
-
 @media screen and (max-width: 440px) {
   .main__list {
     grid-template-columns: repeat(1, 1fr);
   }
 }
-
 .main__aside {
   width: 350px;
   padding: 50px 25px;
   border-right: 1px solid #e4e1e1;
   height: 100%;
-}
-
-@media screen and (max-width: 440px) {
-  .login {
-    width: 320px;
-  }
 }
 
 .admin__input__block {
@@ -478,11 +450,10 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 10px 0;
 }
-
 .admin__input__block label {
   color: rgb(51, 51, 51);
   font-family: "Poppins", sans-serif;
@@ -500,11 +471,10 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 23px;
 }
-
 .admin__form input,
 .admin__form textarea {
   font-size: inherit;
@@ -513,15 +483,13 @@ body {
   border-bottom: 1px solid;
   padding: 10px 8px 2px 8px;
   -webkit-box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
-  box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
+          box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
 }
-
 .admin__form input:focus,
 .admin__form textarea:focus {
   outline: none;
   border-bottom: 2px solid rgb(0, 119, 255);
 }
-
 .admin__form textarea {
   overflow: hidden;
 }
@@ -538,7 +506,6 @@ body {
   transition: all 0.2s ease;
   cursor: pointer;
 }
-
 .admin__btn:hover {
   opacity: 0.8;
 }
@@ -549,60 +516,50 @@ body {
     padding: 35px 10px;
   }
 }
-
 @media screen and (max-width: 535px) {
   .main__block {
     padding-top: 25px;
   }
-
   .main__aside {
     width: 100%;
     padding: 0 60px;
     border-right: none;
   }
-
   .admin__input__block {
     margin: 0;
   }
-
   .admin__btn {
     margin-top: 20px;
   }
-
   .admin__form {
     gap: 8px;
   }
 }
-
 @media screen and (max-width: 440px) {
   .main__aside {
     padding: 0 20px;
   }
 }
-
 .footer {
   background-color: #454444;
 }
-
 .footer__block {
   padding: 0.7rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-
 .footer__text {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 0.8rem;
 }
-
 .footer__cap {
   color: #fff;
   font-family: "Poppins", sans-serif;
@@ -618,11 +575,11 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 100;
 }
 
@@ -651,11 +608,10 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 10px;
 }
-
 .modal__form input,
 .modal__form textarea {
   font-size: inherit;
@@ -664,9 +620,8 @@ body {
   border-bottom: 1px solid;
   padding: 10px 8px 2px 8px;
   -webkit-box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
-  box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
+          box-shadow: inset 0px -1px 0px 0px rgb(72, 71, 71);
 }
-
 .modal__form input:focus,
 .modal__form textarea:focus {
   outline: none;
@@ -676,20 +631,18 @@ body {
 .loader_box {
   display: none;
 }
-
 .loader_box .loader__block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 100vh;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-
 .loader_box .loader {
   border: 32px solid #72d2fe;
   border-top: 38px solid #0092f4;
@@ -697,30 +650,26 @@ body {
   width: 220px;
   height: 220px;
   -webkit-animation: spin 1.35s linear infinite;
-  animation: spin 1.35s linear infinite;
+          animation: spin 1.35s linear infinite;
 }
-
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+            transform: rotate(0deg);
   }
-
   100% {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
-
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+            transform: rotate(0deg);
   }
-
   100% {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
@@ -742,30 +691,23 @@ body {
   .modal__block {
     width: 450px;
   }
-
   .modal__content {
     padding: 35px;
   }
-
   .modal__form {
     gap: 6px;
   }
 }
-
 @media screen and (max-width: 500px) {
   .modal__block {
     width: 350px;
   }
 }
-
 @media screen and (max-width: 400px) {
   .modal__block {
     width: 320px;
   }
-
   .modal__content {
     padding: 20px;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
