--- a/src/stylesheets/scss/block/Login_styles/_login.scss
+++ b/src/stylesheets/scss/block/Login_styles/_login.scss
@@ -3,11 +3,11 @@
     width: 500px;
 }
 
-.login__title__box{
+.login__title__box {
     margin: 0 auto;
 }
 
-.login__cap{
+.login__cap {
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -35,7 +35,7 @@
     gap: 55px;
 }
 
-.login__form{
+.login__form {
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -60,17 +60,19 @@
     }
 }
 
-.login__btn{
+.login__btn {
     @include btn;
     font-size: 24px;
     line-height: 29px;
     // padding: 1rem 0;
     margin-top: 40px;
 }
-#password_visibility{
+
+#password_visibility {
     position: relative;
 }
-.visibility__btn{
+
+.visibility__btn {
     position: absolute;
     top: 50%;
     right: 10px;
@@ -80,7 +82,7 @@
     cursor: pointer;
 }
 
-.visibility__btn{
+.visibility__btn {
     width: 24px;
     height: 24px;
     background-repeat: no-repeat;
@@ -97,24 +99,33 @@
 }
 
 @media screen and (max-width: 550px) {
-    .login{
+    .login {
         width: 375px;
     }
-    .login__block{
+
+    .login__block {
         gap: 30px;
     }
-    .login__form{
+
+    .login__form {
         gap: 16px;
     }
 }
 
 @media screen and (max-width: 450px) {
-    .login__logo{
+    .login__logo {
         font-size: 32px;
         line-height: 36px;
         margin-bottom: 16px;
     }
-    .login__input__block input{
+
+    .login__input__block input {
         padding: 8px 12px 2px 12px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .login {
+        width: 320px;
     }
 }
